--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,10 +4,12 @@
 }
 
 .maxWidthWrapper {
+  position: relative;
 }
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +26,25 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  min-height: 500px;
+  left: 65%;
+  top: 20%;
+  bottom: 10%;
 }
 
 .controlColumn {
+  width: 50%;
+}
+
+.perspectiveBar {
+  background: linear-gradient(to bottom,
+      hsl(195deg, 20%, 86%),
+      hsl(195deg, 20%, 92%));
+  border-top: 2px solid hsl(195deg, 20%, 80%);
+  position: fixed;
+  inset: 0;
+  top: 60%;
+  z-index: -1;
+  pointer-events: none;
 }
